# cs_thesis

./: README.md  prj.conf
ECDSA/: prj.conf
ECDSA/boards/: nrf5340dk_nrf5340_cpuapp_ns.conf
ECDSA/src/: main.c
KECCAK256/: CMakeLists.txt
KECCAK256/src/: main.c
RLP/: CMakeLists.txt
RLP/src/: main.c
RLP_KECCAK256/: CMakeLists.txt
RLP_KECCAK256/src/: ecdsa.c  ecdsa.h  main.c
boards/: nrf9160dk_nrf9160.overlay  nrf9160dk_nrf9160ns.conf  nrf9160dk_nrf9160ns.overlay
gps_Project/: prj.conf
gps_Project/src/: main.c
main_project/: CMakeLists.txt  Kconfig  prj.conf
main_project/boards/: nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay
main_project/dummy_partition/: dummy_partition.c  tfm_dummy_partition.yaml
main_project/src/: gps.c  gps_function.h  gps_uart.h  main.c  save_data.c  uart.c
src/: main.c
